// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Testing ReactApp > default React App behavior 1`] = `
{
  "data": {
    "aws_iam_policy_document": {
      "Website_host_AllowDistributionReadOnly_B59C9ABB": {
        "statement": [
          {
            "actions": [
              "s3:GetObject",
            ],
            "condition": [
              {
                "test": "StringEquals",
                "values": [
                  "\${aws_cloudfront_distribution.Website_host_Distribution_F02554EB.arn}",
                ],
                "variable": "AWS:SourceArn",
              },
            ],
            "principals": [
              {
                "identifiers": [
                  "cloudfront.amazonaws.com",
                ],
                "type": "Service",
              },
            ],
            "resources": [
              "\${aws_s3_bucket.Website_host_WebsiteBucket_82D108C7.arn}/*",
            ],
          },
        ],
      },
    },
  },
  "output": {
    "WING_TEST_RUNNER_FUNCTION_IDENTIFIERS": {
      "value": "[]",
    },
  },
  "resource": {
    "aws_cloudfront_distribution": {
      "Website_host_Distribution_F02554EB": {
        "default_cache_behavior": {
          "allowed_methods": [
            "GET",
            "HEAD",
          ],
          "cached_methods": [
            "GET",
            "HEAD",
          ],
          "compress": true,
          "default_ttl": 3600,
          "forwarded_values": {
            "cookies": {
              "forward": "none",
            },
            "query_string": false,
          },
          "max_ttl": 86400,
          "min_ttl": 0,
          "target_origin_id": "s3Origin",
          "viewer_protocol_policy": "redirect-to-https",
        },
        "default_root_object": "index.html",
        "enabled": true,
        "origin": [
          {
            "domain_name": "\${aws_s3_bucket.Website_host_WebsiteBucket_82D108C7.bucket_regional_domain_name}",
            "origin_access_control_id": "\${aws_cloudfront_origin_access_control.Website_host_CloudfrontOac_2634D8BB.id}",
            "origin_id": "s3Origin",
          },
        ],
        "price_class": "PriceClass_100",
        "restrictions": {
          "geo_restriction": {
            "locations": [],
            "restriction_type": "none",
          },
        },
        "viewer_certificate": {
          "cloudfront_default_certificate": true,
        },
      },
    },
    "aws_cloudfront_origin_access_control": {
      "Website_host_CloudfrontOac_2634D8BB": {
        "name": "host-c802fedc-cloudfront-oac",
        "origin_access_control_origin_type": "s3",
        "signing_behavior": "always",
        "signing_protocol": "sigv4",
      },
    },
    "aws_s3_bucket": {
      "Website_host_WebsiteBucket_82D108C7": {
        "bucket_prefix": "host-c802fedc-",
        "force_destroy": false,
      },
    },
    "aws_s3_bucket_policy": {
      "Website_host_DistributionS3BucketPolicy_31648792": {
        "bucket": "\${aws_s3_bucket.Website_host_WebsiteBucket_82D108C7.id}",
        "policy": "\${data.aws_iam_policy_document.Website_host_AllowDistributionReadOnly_B59C9ABB.json}",
      },
    },
    "aws_s3_bucket_website_configuration": {
      "Website_host_BucketWebsiteConfiguration_C04DCC28": {
        "bucket": "\${aws_s3_bucket.Website_host_WebsiteBucket_82D108C7.bucket}",
        "index_document": {
          "suffix": "index.html",
        },
      },
    },
    "aws_s3_object": {
      "Website_host_File--indexhtml_87D24D31": {
        "bucket": "\${aws_s3_bucket.Website_host_WebsiteBucket_82D108C7.bucket}",
        "content_type": "text/html; charset=utf-8",
        "depends_on": [
          "aws_s3_bucket.Website_host_WebsiteBucket_82D108C7",
        ],
        "key": "/index.html",
        "source": "<source>",
        "source_hash": "\${filemd5(<source>)}",
      },
      "Website_host_File-wingjs_2C98039E": {
        "bucket": "\${aws_s3_bucket.Website_host_WebsiteBucket_82D108C7.bucket}",
        "content": "// This file is generated by wing
window.wingEnv = {};",
        "content_type": "text/javascript",
        "depends_on": [
          "aws_s3_bucket.Website_host_WebsiteBucket_82D108C7",
        ],
        "key": "wing.js",
      },
    },
  },
}
`;

exports[`Testing ReactApp > default React App behavior 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Website": {
                "children": {
                  "host": {
                    "children": {
                      "AllowDistributionReadOnly": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformDataSource",
                          "version": "0.17.0",
                        },
                        "id": "AllowDistributionReadOnly",
                        "path": "root/Default/Website/host/AllowDistributionReadOnly",
                      },
                      "BucketWebsiteConfiguration": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "BucketWebsiteConfiguration",
                        "path": "root/Default/Website/host/BucketWebsiteConfiguration",
                      },
                      "CloudfrontOac": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "CloudfrontOac",
                        "path": "root/Default/Website/host/CloudfrontOac",
                      },
                      "Distribution": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "Distribution",
                        "path": "root/Default/Website/host/Distribution",
                      },
                      "DistributionS3BucketPolicy": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "DistributionS3BucketPolicy",
                        "path": "root/Default/Website/host/DistributionS3BucketPolicy",
                      },
                      "File--index.html": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "File--index.html",
                        "path": "root/Default/Website/host/File--index.html",
                      },
                      "File-wing.js": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "File-wing.js",
                        "path": "root/Default/Website/host/File-wing.js",
                      },
                      "WebsiteBucket": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "WebsiteBucket",
                        "path": "root/Default/Website/host/WebsiteBucket",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.2.70",
                    },
                    "display": {
                      "description": "A static website",
                      "title": "Website",
                    },
                    "id": "host",
                    "path": "root/Default/Website/host",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A deployable React App",
                  "title": "React App",
                },
                "id": "Website",
                "path": "root/Default/Website",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.17.0",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "cloud.TestRunner": {
                "children": {
                  "TestFunctionArns": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformOutput",
                      "version": "0.17.0",
                    },
                    "id": "TestFunctionArns",
                    "path": "root/Default/cloud.TestRunner/TestFunctionArns",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A suite of APIs for running tests and collecting results.",
                  "hidden": true,
                  "title": "TestRunner",
                },
                "id": "cloud.TestRunner",
                "path": "root/Default/cloud.TestRunner",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.2.70",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.17.0",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.17.0",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.17.0",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`Testing ReactApp > website with addEnvironment 1`] = `
{
  "data": {
    "aws_iam_policy_document": {
      "Website_host_AllowDistributionReadOnly_B59C9ABB": {
        "statement": [
          {
            "actions": [
              "s3:GetObject",
            ],
            "condition": [
              {
                "test": "StringEquals",
                "values": [
                  "\${aws_cloudfront_distribution.Website_host_Distribution_F02554EB.arn}",
                ],
                "variable": "AWS:SourceArn",
              },
            ],
            "principals": [
              {
                "identifiers": [
                  "cloudfront.amazonaws.com",
                ],
                "type": "Service",
              },
            ],
            "resources": [
              "\${aws_s3_bucket.Website_host_WebsiteBucket_82D108C7.arn}/*",
            ],
          },
        ],
      },
    },
  },
  "output": {
    "WING_TEST_RUNNER_FUNCTION_IDENTIFIERS": {
      "value": "[]",
    },
  },
  "resource": {
    "aws_cloudfront_distribution": {
      "Website_host_Distribution_F02554EB": {
        "default_cache_behavior": {
          "allowed_methods": [
            "GET",
            "HEAD",
          ],
          "cached_methods": [
            "GET",
            "HEAD",
          ],
          "compress": true,
          "default_ttl": 3600,
          "forwarded_values": {
            "cookies": {
              "forward": "none",
            },
            "query_string": false,
          },
          "max_ttl": 86400,
          "min_ttl": 0,
          "target_origin_id": "s3Origin",
          "viewer_protocol_policy": "redirect-to-https",
        },
        "default_root_object": "index.html",
        "enabled": true,
        "origin": [
          {
            "domain_name": "\${aws_s3_bucket.Website_host_WebsiteBucket_82D108C7.bucket_regional_domain_name}",
            "origin_access_control_id": "\${aws_cloudfront_origin_access_control.Website_host_CloudfrontOac_2634D8BB.id}",
            "origin_id": "s3Origin",
          },
        ],
        "price_class": "PriceClass_100",
        "restrictions": {
          "geo_restriction": {
            "locations": [],
            "restriction_type": "none",
          },
        },
        "viewer_certificate": {
          "cloudfront_default_certificate": true,
        },
      },
    },
    "aws_cloudfront_origin_access_control": {
      "Website_host_CloudfrontOac_2634D8BB": {
        "name": "host-c802fedc-cloudfront-oac",
        "origin_access_control_origin_type": "s3",
        "signing_behavior": "always",
        "signing_protocol": "sigv4",
      },
    },
    "aws_s3_bucket": {
      "Website_host_WebsiteBucket_82D108C7": {
        "bucket_prefix": "host-c802fedc-",
        "force_destroy": false,
      },
    },
    "aws_s3_bucket_policy": {
      "Website_host_DistributionS3BucketPolicy_31648792": {
        "bucket": "\${aws_s3_bucket.Website_host_WebsiteBucket_82D108C7.id}",
        "policy": "\${data.aws_iam_policy_document.Website_host_AllowDistributionReadOnly_B59C9ABB.json}",
      },
    },
    "aws_s3_bucket_website_configuration": {
      "Website_host_BucketWebsiteConfiguration_C04DCC28": {
        "bucket": "\${aws_s3_bucket.Website_host_WebsiteBucket_82D108C7.bucket}",
        "index_document": {
          "suffix": "index.html",
        },
      },
    },
    "aws_s3_object": {
      "Website_host_File--indexhtml_87D24D31": {
        "bucket": "\${aws_s3_bucket.Website_host_WebsiteBucket_82D108C7.bucket}",
        "content_type": "text/html; charset=utf-8",
        "depends_on": [
          "aws_s3_bucket.Website_host_WebsiteBucket_82D108C7",
        ],
        "key": "/index.html",
        "source": "<source>",
        "source_hash": "\${filemd5(<source>)}",
      },
      "Website_host_File-wingjs_2C98039E": {
        "bucket": "\${aws_s3_bucket.Website_host_WebsiteBucket_82D108C7.bucket}",
        "content": "// This file is generated by wing
window.wingEnv = {
  \\"key\\": \\"value\\"
};",
        "content_type": "text/javascript",
        "depends_on": [
          "aws_s3_bucket.Website_host_WebsiteBucket_82D108C7",
        ],
        "key": "wing.js",
      },
    },
  },
}
`;

exports[`Testing ReactApp > website with addEnvironment 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Website": {
                "children": {
                  "host": {
                    "children": {
                      "AllowDistributionReadOnly": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformDataSource",
                          "version": "0.17.0",
                        },
                        "id": "AllowDistributionReadOnly",
                        "path": "root/Default/Website/host/AllowDistributionReadOnly",
                      },
                      "BucketWebsiteConfiguration": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "BucketWebsiteConfiguration",
                        "path": "root/Default/Website/host/BucketWebsiteConfiguration",
                      },
                      "CloudfrontOac": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "CloudfrontOac",
                        "path": "root/Default/Website/host/CloudfrontOac",
                      },
                      "Distribution": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "Distribution",
                        "path": "root/Default/Website/host/Distribution",
                      },
                      "DistributionS3BucketPolicy": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "DistributionS3BucketPolicy",
                        "path": "root/Default/Website/host/DistributionS3BucketPolicy",
                      },
                      "File--index.html": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "File--index.html",
                        "path": "root/Default/Website/host/File--index.html",
                      },
                      "File-wing.js": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "File-wing.js",
                        "path": "root/Default/Website/host/File-wing.js",
                      },
                      "WebsiteBucket": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "WebsiteBucket",
                        "path": "root/Default/Website/host/WebsiteBucket",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.2.70",
                    },
                    "display": {
                      "description": "A static website",
                      "title": "Website",
                    },
                    "id": "host",
                    "path": "root/Default/Website/host",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A deployable React App",
                  "title": "React App",
                },
                "id": "Website",
                "path": "root/Default/Website",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.17.0",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "cloud.TestRunner": {
                "children": {
                  "TestFunctionArns": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformOutput",
                      "version": "0.17.0",
                    },
                    "id": "TestFunctionArns",
                    "path": "root/Default/cloud.TestRunner/TestFunctionArns",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A suite of APIs for running tests and collecting results.",
                  "hidden": true,
                  "title": "TestRunner",
                },
                "id": "cloud.TestRunner",
                "path": "root/Default/cloud.TestRunner",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.2.70",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.17.0",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.17.0",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.17.0",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
